<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layout_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="horizontal"
                android:paddingBottom="11dp"
                android:paddingLeft="@dimen/view_margin"
                android:paddingRight="@dimen/view_margin"
                android:paddingTop="11dp" >

                <cn.com.hyrt.carserversurvey.base.view.ImageLoaderView
                    android:id="@+id/iv_face_img"
                    android:layout_width="@dimen/face_img_size"
                    android:layout_height="@dimen/face_img_size"
                    android:background="@drawable/face_img_border"
                    android:padding="1dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_img_default" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/view_margin_big"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/usercode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/usercode"
                        android:textColor="#242323"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:id="@+id/regrecode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/view_margin"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/regrecode"
                        android:textColor="#242323"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:id="@+id/curlogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/curlogin"
                        android:textColor="#242323"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/bg_line" />

            <Button
                android:id="@+id/btn_regrecode"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="#299fff"
                android:text="@string/chinfophoto"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_editpassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="#299fff"
                android:text="@string/updatepassword"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_loginout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/loginout"
                android:textColor="#299fff"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>