<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_top_margin"
                android:layout_marginRight="@dimen/main_top_margin"
                android:background="@drawable/bg_input_block"
                android:layout_marginTop="45dp"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/main_top_margin"
                        android:text="@string/info_old_pwd_label"
                        android:textColor="#7e7e7e"
                        android:textSize="@dimen/input_text_size" />

                    <EditText
                        android:id="@+id/et_old_pwd"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="1dp"
                        android:background="#fff"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:paddingLeft="49dp"
                        android:singleLine="true"
                        android:textColor="#000"
                        android:textSize="@dimen/input_text_size" 
                        android:paddingRight="@dimen/main_top_margin"/>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/small_line_size"
                    android:background="#a8a7a8" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/main_top_margin"
                        android:text="@string/info_new_pwd_label"
                        android:textColor="#7e7e7e"
                        android:textSize="@dimen/input_text_size" />

                    <EditText
                        android:id="@+id/et_new_pwd"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="1dp"
                        android:background="#fff"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:paddingLeft="49dp"
                        android:singleLine="true"
                        android:textColor="#000"
                        android:textSize="@dimen/input_text_size" 
                        android:paddingRight="@dimen/main_top_margin"/>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/small_line_size"
                    android:background="#a8a7a8" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/main_top_margin"
                        android:text="@string/info_confirm_pwd_label"
                        android:textColor="#7e7e7e"
                        android:textSize="@dimen/input_text_size" />

                    <EditText
                        android:id="@+id/et_confirm_pwd"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="2dp"
                        android:background="#fff"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:paddingLeft="49dp"
                        android:singleLine="true"
                        android:textColor="#000"
                        android:textSize="@dimen/input_text_size" 
                        android:paddingRight="@dimen/main_top_margin"/>
                </LinearLayout>
            </LinearLayout>
    <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_top_margin"
                android:layout_marginRight="@dimen/main_top_margin"
                android:layout_marginTop="45dp"
                android:orientation="vertical" >        
    <Button 
            android:layout_width="242dp"
            android:layout_height="47dp"
            android:background="@drawable/bg_button"
            android:text="@string/info_confirm_edit"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:layout_margin="@dimen/view_margin"
            android:layout_gravity="center_horizontal"/>
    <Button 
            android:layout_width="242dp"
            android:layout_height="47dp"
            android:background="@drawable/bg_info_editpassword"
            android:text="@string/info_confirm_editinfo"
            android:textColor="#111111"
            android:layout_marginTop="1dp"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"/>
	</LinearLayout>
</LinearLayout>
